<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nanodegree.android.myappportfolio.MainActivity"
    android:textAlignment="center"
    android:touchscreenBlocksFocus="false">

    <TextView

        android:text="@string/lblCaption"
        android:id="@+id/lblCaption"
        style="@style/MainCaptionAppearance"
        android:textAlignment="center" />

    <Button
        android:text="@string/btnSpotifyStreamer"
        android:id="@+id/btnSpotifyStreamer"
        style="@style/ButtonAppearance.Orange"/>

    <Button
        android:text="@string/btnScoresApp"
        android:id="@+id/btnScoresApp"
        style="@style/ButtonAppearance.Orange"/>

    <Button
        android:text="@string/btnLibraryApp"
        android:id="@+id/btnLibraryApp"
        style="@style/ButtonAppearance.Orange"/>

    <Button
        android:text="@string/btnBuildItBigger"
        android:id="@+id/btnBuildItBigger"
        style="@style/ButtonAppearance.Orange"/>

    <Button
        android:text="@string/btnXYZReader"
        android:id="@+id/btnXYZReader"
        style="@style/ButtonAppearance.Orange"/>

    <Button
        android:text="@string/btnCapStoneMyOwnApp"
        android:id="@+id/btnCapStoneMyOwnApp"
        style="@style/ButtonAppearance.Red"/>

</LinearLayout>
